WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216251
REGRESSION(
r266645
): Caused MotionMark regression
https://bugs.webkit.org/show_bug.cgi?id=216251
Summary
REGRESSION(r266645): Caused MotionMark regression
WebKit Commit Bot
Reported
2020-09-07 13:54:07 PDT
https://trac.webkit.org/changeset/266645
broke the build: Caused MotionMark regression This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r266645
(8.52 KB, patch)
2020-09-07 13:54 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2020-09-07 13:54:13 PDT
Created
attachment 408195
[details]
REVERT of
r266645
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2020-09-07 13:55:37 PDT
Committed
r266710
: <
https://trac.webkit.org/changeset/266710
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408195
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-07 13:56:13 PDT
<
rdar://problem/68473866
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug