Cherry-pick r266710. rdar://problem/68732167

Unreviewed, reverting r266645.
    https://bugs.webkit.org/show_bug.cgi?id=216251

    Caused MotionMark regression

    Reverted changeset:

    "Move lazy DisplayLink tear down logic from the WebProcess to
    the UIProcess"
    https://bugs.webkit.org/show_bug.cgi?id=216195
    https://trac.webkit.org/changeset/266645

    Canonical link: https://commits.webkit.org/229079@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266710 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.52@safari-610.2.5.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.2.5.1-branch@266943 268f45cc-cd09-0410-ab3c-d52691b4dbfc